@@ -1,11 +1,25 @@
 package onboarding;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public class Problem5 {
     public static List<Integer> solution(int money) {
-        List<Integer> answer = Collections.emptyList();
+        //List<Integer> answer = Collections.emptyList();
+        List<Integer> answer = new ArrayList<>();
+
+        List<Integer> billList = List.of(50000, 10000, 5000, 1000, 500, 100, 50, 10, 1);
+
+        for(Integer bill : billList) {
+            Integer digit = money/bill;
+
+            answer.add(answer.size(), digit);
+
+            money -= bill*digit;
+        }
+
         return answer;
     }
+
 }
